[gd_scene load_steps=4 format=3 uid="uid://vhc2a0nt18ep"]

[ext_resource type="Script" path="res://Scripts/moving_platform.gd" id="1_whp25"]
[ext_resource type="Texture2D" uid="uid://ctbovjl1lvhe0" path="res://Sprites/Environment/desert_tiles/2.png" id="2_odcb6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2qfa"]
size = Vector2(512, 127)

[node name="MovingPlatform" type="AnimatableBody2D"]
collision_layer = 4097
collision_mask = 4097
sync_to_physics = false
script = ExtResource("1_whp25")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_y2qfa")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 1)
texture = ExtResource("2_odcb6")

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PauseTimer" to="." method="start_moving"]
